# simd-adler32

./: .rustfmt.toml  Cargo.toml  README.md
bench/: alts.rs  variants.rs
fuzz/: Cargo.toml
fuzz/targets/: avx2.rs  avx512.rs  neon.rs  scalar.rs  sse2.rs  wasm.rs
src/: lib.rs
src/imp/: avx2.rs  avx512.rs  mod.rs  neon.rs  scalar.rs  sse2.rs  ssse3.rs  stdsimd.rs  wasm.rs
