[package]
name = "simd-adler32"
authors = ["Marvin Countryman <me@maar.vin>"]
license = "MIT"
version = "0.4.0"
edition = "2024"
keywords = ["simd", "avx2", "ssse3", "adler", "adler32", "neon"]
categories = ["algorithms", "no-std"]
repository = "https://github.com/mcountryman/simd-adler32"
description = "A SIMD-accelerated Adler-32 hash algorithm implementation."
exclude = ["bench"]

[profile.release]
debug = true
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "alts"
path = "bench/alts.rs"
harness = false

[[bench]]
name = "variants"
path = "bench/variants.rs"
harness = false

[features]
default = ["std", "const-generics"]
std = []
nightly = [
    "rand/nightly",
    "rand/simd_support",
]
const-generics = []

[dev-dependencies]
rand = "0.9"
criterion = "0.7"

# competition
adler = "1.0.2"
adler32 = "1.2.0"
